--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <li>Lisa Broedlin - contributed to Hacktoberfest 2018</li>
      <li>Nilesh Kumar - contributed to hacktoberfest</li>
       <li>Amit moolwani- contributed to hacktoberfest</li>
+      <li>Ankur Kalambe- contributed to hacktoberfest</li>
       <li>Rajani - contributed to hacktoberfest</li>
       <li>Garima - contributed to hacktoberfest</li>
       <li>Aman Lahoti - contributed to hacktoberfest</li>
